--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,12 @@ body {
 		text-align: center;
 		margin: 0 auto;
 	}
+	#toFlex {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		justify-content: center;
+		align-items: center;
+	}
 }
-
 
