--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,116 @@
 body {
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
+  background-color: #9E9CA3;
 }
 
 body .board {
-  text-align: center;
+  max-width: 1200px;
   margin: 0 auto;
+  text-align: center;
+  background-color: #EFEDE3;
 }
 
-body #toFlex {
+body .board h1 {
+  text-align: center;
+  color: #655686;
+  padding: 50px 0 0 0;
+  font-size: 60px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 3px;
+}
+
+body .board .big {
+  width: 100px;
+  height: 40px;
+}
+
+body .board button {
+  margin: 0 auto;
+  width: 30px;
+}
+
+body .board .create-column {
+  background-color: #2CA60C;
+  border-color: #2CA60C;
+  width: 150px;
+  height: 60px;
+  font-size: 15px;
+  text-transform: uppercase;
+  border-radius: 3px;
+  box-shadow: 0px;
+}
+
+body .board .create-column:hover {
+  background-color: green;
+  font-weight: bold;
+  box-shadow: 0px 0px 0px 1px;
+}
+
+body .board .column-container {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  border: 2px solid black;
+  background-color: #655686;
+  max-width: 1200px;
+  margin: auto;
+  padding: 30px 0;
+  margin-top: 50px;
+}
+
+body .board .column-container .column {
+  background-color: #EFEDE3;
+  width: 300px;
+  min-height: 200px;
+  margin: 10px;
+  text-align: center;
+  position: relative;
+}
+
+body .board .column-container .column h2 {
+  padding-bottom: 10px;
+  color: #655686;
+  text-transform: uppercase;
+  font-size: 30px;
+  letter-spacing: 2px;
+}
+
+body .board .column-container .column .btn-delete {
+  width: 100%;
+  background-color: #F3002B;
+  border-color: #F3002B;
+  cursor: pointer;
+}
+
+body .board .column-container .column .add-card {
+  width: 100%;
+  background-color: #2CA60C;
+  border-color: #2CA60C;
+  cursor: pointer;
+}
+
+body .board .column-container .column .column-card-list {
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+body .board .column-container .column .column-card-list .card {
+  background-color: darkgray;
+  min-width: 100px;
+  margin: 20px;
+  max-width: 260px;
+}
+
+body .board .column-container .column .column-card-list .card .card-description {
+  font-style: italic;
+  font-weight: bold;
+  min-height: 50px;
 }
 
 /*# sourceMappingURL=style.css.map */
