--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,11 +10,12 @@ body {
         h1 {
             text-align: center;
             color: #655686;
-            padding: 50px 0 0 0 ;
+            padding: 20px 0 0 0;
             font-size: 60px;
             text-transform: uppercase;
-             font-weight: bold;
-             letter-spacing: 3px;	
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin: 0;	
         }
         .big{
         	width: 100px;
@@ -25,27 +26,22 @@ body {
             width: 30px;
         }
         .create-column {
-        	
-					background-color: #2CA60C;
-					border-color: #2CA60C;
-           width: 150px;
+			background-color: #2CA60C;
+			border-color: #2CA60C;
+            width: 150px;
         	height: 60px;
         	font-size: 15px;
         	text-transform:uppercase;
-        	border-radius: 3px;
-        	box-shadow: 0px;
             &:hover {
             	background-color:green;
             	font-weight:bold;
             	box-shadow: 0px 0px 0px 1px;
-                
             }
         }
         .column-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            border: 2px solid black;
             background-color: #655686;
             max-width: 1200px;
             margin: auto;
