--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,26 @@
 body {
   padding: 0;
   margin: 0 auto;
-  background-color: #9E9CA3;
+  background-color: #048CAC;
 }
 
 body .board {
-  max-width: 1200px;
   margin: 0 auto;
   text-align: center;
-  background-color: #EFEDE3;
+  background-color: #048CAC;
 }
 
 body .board h1 {
   text-align: center;
-  color: #655686;
-  padding: 20px 0 0 0;
-  font-size: 60px;
+  color: #E2E4E6;
+  padding: 20px 0;
+  font-size: 15px;
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 3px;
   margin: 0;
+  background-color: #023855;
+  font-style: italic;
 }
 
 body .board .big {
@@ -51,7 +52,7 @@ body .board .column-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  background-color: #655686;
+  background-color: #048CAC;
   max-width: 1200px;
   margin: auto;
   padding: 30px 0;
@@ -59,34 +60,47 @@ body .board .column-container {
 }
 
 body .board .column-container .column {
-  background-color: #EFEDE3;
+  background-color: #E2E4E6;
   width: 300px;
   min-height: 200px;
   margin: 10px;
-  text-align: center;
+  text-align: left;
   position: relative;
+  border-radius: 10px;
+  border: 1px solid black;
 }
 
 body .board .column-container .column h2 {
-  padding-bottom: 10px;
-  color: #655686;
-  text-transform: uppercase;
-  font-size: 30px;
-  letter-spacing: 2px;
+  padding: 10px 20px;
+  color: black;
+  font-size: 15px;
+  border-bottom: 1px solid black;
 }
 
 body .board .column-container .column .btn-delete {
   width: 100%;
-  background-color: #F3002B;
-  border-color: #F3002B;
   cursor: pointer;
+  color: black;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+body .board .column-container .column .btn-delete:hover {
+  background-color: #023855;
+  font-weight: bold;
+  box-shadow: 0px 0px 0px 1px;
 }
 
 body .board .column-container .column .add-card {
   width: 100%;
-  background-color: #2CA60C;
-  border-color: #2CA60C;
   cursor: pointer;
+  color: black;
+}
+
+body .board .column-container .column .add-card:hover {
+  background-color: #023855;
+  font-weight: bold;
+  box-shadow: 0px 0px 0px 1px;
 }
 
 body .board .column-container .column .column-card-list {
@@ -99,10 +113,10 @@ body .board .column-container .column .column-card-list {
 }
 
 body .board .column-container .column .column-card-list .card {
-  background-color: darkgray;
-  min-width: 100px;
-  margin: 20px;
-  max-width: 260px;
+  background-color: white;
+  min-width: 260px;
+  border-radius: 5px;
+  min-height: 50px;
 }
 
 body .board .column-container .column .column-card-list .card .card-description {
