--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,14 +27,14 @@ body {
             width: 30px;
         }
         .create-column {
-			background-color: #2CA60C;
-			border-color: #2CA60C;
+        	background-color: #023855;
+        	border: none;
             width: 150px;
         	height: 60px;
         	font-size: 15px;
         	text-transform:uppercase;
+        	color:white;
             &:hover {
-            	background-color:green;
             	font-weight:bold;
             	box-shadow: 0px 0px 0px 1px;
             }
@@ -56,12 +56,15 @@ body {
                text-align: left;
                position: relative;
                border-radius: 10px;
-               border: 1px solid black;
                 h2 {
                 	padding: 10px 20px;
-                	color: black;
+                	color: white;
                 	font-size: 15px;
                 	border-bottom: 1px solid black;
+                	background-color:#023855;
+                	margin: 0;
+                	border-top-right-radius: 10px;
+                	border-top-left-radius: 10px;
                 }
                 .btn-delete {
                     width: 100%;
@@ -69,8 +72,10 @@ body {
                     color: black;
                     border-bottom-left-radius: 10px;
                     border-bottom-right-radius: 10px;
+                    border: none;
                     &:hover {
             			background-color:#023855;
+            			border: none;
             			font-weight:bold;
             			box-shadow: 0px 0px 0px 1px;
             		}
@@ -79,8 +84,10 @@ body {
 					width:100%;
 					cursor: pointer;
 					color: black;
+					border: none;
 					&:hover {
             			background-color:#023855;
+            			border: none;
             			font-weight:bold;
             			box-shadow: 0px 0px 0px 1px;
             		}
@@ -97,6 +104,8 @@ body {
                         min-width: 260px;
                         border-radius: 5px;
                         min-height: 50px;
+                        border: 1px solid black;
+                        margin-top:20px;
                         .card-description {
                             font-style: italic;
                             font-weight: bold;
